[Fix]: Align text

--- a/src/pages/general-style.css
+++ b/src/pages/general-style.css
@@ -175,7 +175,6 @@ body {
     background-color: #005CFF; /* Color personalizado */
   }
   .upload-indicator {
-    display: flex;
     align-items: center;
   }
   .upload-icon {
